# tidyxl

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
docs/_static/: custom.css
docs/api/: cells.rst  formats.rst  validation.rst  workbook.rst
examples/: column_demo.py  complete_demo.py  new_functions_demo.py  tutorial.py
tests/: __init__.py  conftest.py  test_other_functions.py  test_xlsx_cells.py
tidyxl/: __init__.py  cells.py  core.py  formats.py  validation.py  workbook.py
